# C_DZ2

./: .gitignore  CPPLINT.cfg  README.md
.github/workflows/: ci.yml
linters/: run.sh
project/: CMakeLists.txt  main.c  test10char
project/headers/: simple_count.h  thread_count.h
project/simple_count/: CMakeLists.txt  simple_count.c
project/sources/: simple_count.c  thread_count.c
project/tests/: CMakeLists.txt  main_test.cpp  test.cpp  test_100MB.cpp
project/thread_count/: CMakeLists.txt  thread_count.c  thread_count.h
